# suggector

./: .gitignore  README.md  custom_suggector.py  example_config.json  flask_app.py  pyproject.toml  requirements.txt  suggector.py  templates.py
converters/: __init__.py  base_converter.py  google_chrome_converter.py  google_firefox_converter.py  yandex_yabro_converter.py
injectors/: base_injector.py  debug_injector.py  timestamp_injector.py
suggector/: Suggector.py  __init__.py  flask_app.py  templates.py
suggector/converters/: __init__.py  api_converter.py  base_converter.py  google_chrome_converter.py  google_firefox_converter.py  yandex_yabro_converter.py
suggector/injectors/: __init__.py  base_injector.py  debug_injector.py  timestamp_injector.py  url_search_injector.py
suggector/suggest/: __init__.py  browser.py
suggector/templates/: char_icon.svg.template  index.html  opensearch.xml  opensearch_xml_link.html
suggest/: __init__.py  browser.py  config.py  models.py
